* ADD:Псевдо рендер * WIP:Рендер ui * ADD:Импорт текстур по THM * ADD:Интерфейс движка(XRayEngine)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,8 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-
+GameInstanceClass=/Script/XRayEngine.XRayGameInstance
+GlobalDefaultGameMode=/Script/XRayEngine.XRayGameModeBase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
