* ADD:SkeletonMesh для псевдо рендра * FIX:Сборка на UE 5.1 * FIX:Фиксы по мелочи

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/Empty.Empty
 GameInstanceClass=/Script/XRayEngine.XRayGameInstance
 GlobalDefaultGameMode=/Script/XRayEngine.XRayGameModeBase
+EditorStartupMap=/Game/Maps/Empty.Empty
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
