* ADD: XRayInput (теперь input работает через unreal) * FIX: Рендер ui * ADD: UXRayGameViewportClient(аналог CRenderDevice в xray)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -54,6 +54,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/Stalker")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Stalker")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="StalkerGameModeBase")
+GameViewportClientClassName=/Script/XRayEngine.XRayGameViewportClient
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
