--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Plugins/XRayEngine/Source/ThirdParty"]
-	path = Plugins/XRayEngine/Source/ThirdParty
+	path = Source/XRayEngine
 	url = https://github.com/RedPandaProjects/XRayEngine
