* ADD Import OGF * FIX Build and editor module not worked

--- a/Stalker.uproject
+++ b/Stalker.uproject
@@ -11,6 +11,15 @@
 			"AdditionalDependencies": [
 				"Engine"
 			]
+		},
+		{
+			"Name": "StalkerEditor",
+			"Type": "Editor",
+			"LoadingPhase": "PostEngineInit",
+			"AdditionalDependencies": [
+				"Stalker",
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
