* ADD Отладочный рендер * ADD Меню выборы игры и настройки проекта * FIX Вылета при выборе игры

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,8 @@
 
+
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=561F670848F3C00813FDFDAF12C4A7FC
+
+[/Script/Stalker.StalkerGameSettings]
+EditorStartupGame=COP
+
