* ADD:SOC Materials * ADD:Импортер DDS

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,5 +4,5 @@
 ProjectID=561F670848F3C00813FDFDAF12C4A7FC
 
 [/Script/Stalker.StalkerGameSettings]
-EditorStartupGame=COP
+EditorStartupGame=SHOC
 
