* ФИКС которые сделал вчера просил залить дима

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Empty.Empty
-EditorStartupMap=/Game/Maps/Empty.Empty
+GameDefaultMap=/Game/SHOC/Maps/l01_escape.l01_escape
+EditorStartupMap=/Game/SHOC/Maps/l01_escape.l01_escape
 GameInstanceClass=/Script/Stalker.StalkerGameInstance
 GlobalDefaultGameMode=/Script/Stalker.StalkerGameMode
 
