--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,7 +4,10 @@
 ProjectID=561F670848F3C00813FDFDAF12C4A7FC
 
 [/Script/Stalker.StalkerGameSettings]
-EditorStartupGame=SHOC
+EditorStartupGame=COP
+LevelsSOC=(("Test", (Map="/Game/Maps/Empty.Empty")),("l01_escape", (Map="/Game/Maps/l01_escape.l01_escape")))
+LevelsCS=()
+LevelsCOP=()
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
