* ADD Загрузку груп для импорта сцены * FIX Инвалидный AABB у сетки * ADD Тулы для авто импорта * FIX Много других багов

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,15 +4,16 @@
 ProjectID=561F670848F3C00813FDFDAF12C4A7FC
 
 [/Script/Stalker.StalkerGameSettings]
-EditorStartupGame=SHOC
+EditorStartupGame=COP
 LevelsSOC=(("test2", (Map="/Game/Maps/test2.test2")),("test_menu", (Map="/Game/Maps/test_menu.test_menu")))
 LevelsCS=()
-LevelsCOP=()
+LevelsCOP=(("labx8", (Map="/Game/COP/Maps/COP_labx8.COP_labx8",IncludeInBuildSpawn=False)),("zaton", (Map="/Game/COP/Maps/COP_zaton.COP_zaton")),("jupiter", (Map="/Game/COP/Maps/COP_jupiter.COP_jupiter")))
 NeedAutoBuildCForm=True
 NeedAutoBuildAIMap=True
 NeedAutoBuildLevelSpawn=True
 NeedAutoBuildGameSpawn=True
 UseCurrentWorldSpawn=True
+IgnoreIncludeInBuildSpawn=False
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
