* FIX Пару багов

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,13 +7,14 @@ ProjectID=561F670848F3C00813FDFDAF12C4A7FC
 EditorStartupGame=COP
 LevelsSOC=(("test2", (Map="/Game/Maps/test2.test2")),("test_menu", (Map="/Game/Maps/test_menu.test_menu")))
 LevelsCS=()
-LevelsCOP=(("labx8", (Map="/Game/COP/Maps/COP_labx8.COP_labx8",IncludeInBuildSpawn=False)),("zaton", (Map="/Game/COP/Maps/COP_zaton.COP_zaton")),("jupiter", (Map="/Game/COP/Maps/COP_jupiter.COP_jupiter")))
+LevelsCOP=(("labx8", (Map="/Game/COP/Maps/COP_labx8.COP_labx8",IncludeInBuildSpawn=False)),("zaton", (Map="/Game/COP/Maps/COP_zaton.COP_zaton")),("jupiter", (Map="/Game/COP/Maps/COP_jupiter.COP_jupiter")),("jupiter_underground", (Map="/Game/COP/Maps/COP_jupiter_underground.COP_jupiter_underground",IncludeInBuildSpawn=False)),("pripyat", (Map="/Game/COP/Maps/COP_pripyat.COP_pripyat",IncludeInBuildSpawn=False)))
 NeedAutoBuildCForm=True
 NeedAutoBuildAIMap=True
 NeedAutoBuildLevelSpawn=True
 NeedAutoBuildGameSpawn=True
-UseCurrentWorldSpawn=True
+UseCurrentWorldSpawn=False
 IgnoreIncludeInBuildSpawn=False
+VerifySpaceRestrictorBorders=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
