* WIP: Attached * FIX: Несколько багов

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,15 +4,15 @@
 ProjectID=CA68C2FE49C7AC3EA24373A72D6469D8
 
 [/Script/Stalker.StalkerGameSettings]
-EditorStartupGame=COP
-LevelsSOC=(("test2", (Map="/Game/Maps/test2.test2")),("test_menu", (Map="/Game/Maps/test_menu.test_menu")))
+EditorStartupGame=SHOC
+LevelsSOC=(("l01_escape", (Map="/Game/SHOC/Maps/SOC_escape.SOC_escape")),("l02_garbage", (Map="/Game/SHOC/Maps/SOC_garbage.SOC_garbage")),("l03_agroprom", (Map="/Game/SHOC/Maps/SOC_agroprom.SOC_agroprom")),("l03u_agr_underground", (Map="/Game/SHOC/Maps/SOC_agr_underground.SOC_agr_underground")),("l04_darkvalley", (Map="/Game/SHOC/Maps/SOC_darkvalley.SOC_darkvalley")),("l04u_labx18", (Map="/Game/SHOC/Maps/SOC_labx18.SOC_labx18")),("l05_bar", (Map="/Game/SHOC/Maps/SOC_bar.SOC_bar")),("l06_rostok", (Map="/Game/SHOC/Maps/SOC_rostok.SOC_rostok")),("l08_yantar", (Map="/Game/SHOC/Maps/SOC_yantar.SOC_yantar")),("l08u_brainlab", (Map="/Game/SHOC/Maps/SOC_brainlab.SOC_brainlab")),("l07_military", (Map="/Game/SHOC/Maps/SOC_military.SOC_military")),("l10_radar", (Map="/Game/SHOC/Maps/SOC_radar.SOC_radar")),("l10u_bunker", (Map="/Game/SHOC/Maps/SOC_bunker.SOC_bunker")),("l11_pripyat", (Map="/Game/SHOC/Maps/SOC_pripyat.SOC_pripyat")),("l12_stancia", (Map="/Game/SHOC/Maps/SOC_stancia.SOC_stancia")),("l12u_sarcofag", (Map="/Game/SHOC/Maps/SOC_sarcofag.SOC_sarcofag")),("l12u_control_monolith", (Map="/Game/SHOC/Maps/SOC_control_monolith.SOC_control_monolith")),("l12_stancia_2", (Map="/Game/SHOC/Maps/SOC_stancia_2.SOC_stancia_2")))
 LevelsCS=(("marsh", (Map="/Game/CS/Maps/CS_marsh.CS_marsh")),("escape", (Map="/Game/CS/Maps/CS_escape.CS_escape")),("garbage", (Map="/Game/CS/Maps/CS_garbage.CS_garbage")),("darkvalley", (Map="/Game/CS/Maps/CS_darkvalley.CS_darkvalley")),("agroprom", (Map="/Game/CS/Maps/CS_agroprom.CS_agroprom")),("agroprom_underground", (Map="/Game/CS/Maps/CS_agroprom_underground.CS_agroprom_underground")),("red_forest", (Map="/Game/CS/Maps/CS_red_forest.CS_red_forest")),("military", (Map="/Game/CS/Maps/CS_military.CS_military")),("limansk", (Map="/Game/CS/Maps/CS_limansk.CS_limansk")),("hospital", (Map="/Game/CS/Maps/CS_hospital.CS_hospital")),("stancia_2", (Map="/Game/CS/Maps/CS_stancia_2.CS_stancia_2")),("yantar", (Map="/Game/CS/Maps/CS_yantar.CS_yantar")))
 LevelsCOP=(("labx8", (Map="/Game/COP/Maps/COP_labx8.COP_labx8",IncludeInBuildSpawn=False)),("zaton", (Map="/Game/COP/Maps/COP_zaton.COP_zaton")),("jupiter", (Map="/Game/COP/Maps/COP_jupiter.COP_jupiter")),("jupiter_underground", (Map="/Game/COP/Maps/COP_jupiter_underground.COP_jupiter_underground",IncludeInBuildSpawn=False)),("pripyat", (Map="/Game/COP/Maps/COP_pripyat.COP_pripyat",IncludeInBuildSpawn=False)))
 NeedAutoBuildCForm=True
 NeedAutoBuildAIMap=True
 NeedAutoBuildLevelSpawn=True
 NeedAutoBuildGameSpawn=True
-UseCurrentWorldSpawn=False
+UseCurrentWorldSpawn=True
 IgnoreIncludeInBuildSpawn=True
 VerifySpaceRestrictorBorders=False
 
