* ADD: Настройка для world'а что не для спавна * FIX: Рендер падал из невалидный ссылок

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/SHOC/Maps/l01_escape.l01_escape
+GameDefaultMap=/Game/BaseNoGit/ThirdParty/mainMenu/mainMenu_LVL.mainMenu_LVL
 EditorStartupMap=/Game/SHOC/Maps/l01_escape.l01_escape
 GameInstanceClass=/Script/Stalker.StalkerGameInstance
 GlobalDefaultGameMode=/Script/Stalker.StalkerGameMode
