* FIX: клипинг текста в UI * FIX: в XRayInput iGetAsyncBtnState и OnMouseWheel * FIX: Не работала пауза * ADD: Транслятор пыс матрицы(она же стандарт) в ue матрицу

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,6 +51,7 @@ r.SkinCache.CompileShaders=True
 r.RayTracing=True
 r.Lumen.HardwareRayTracing=True
 r.Lumen.HardwareRayTracing.LightingMode=0
+r.DefaultFeature.AutoExposure.Method=1
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
