--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -48,10 +48,14 @@ r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=0
 r.Lumen.TraceMeshSDFs=1
 r.SkinCache.CompileShaders=True
-r.RayTracing=True
+r.RayTracing=False
 r.Lumen.HardwareRayTracing=True
 r.Lumen.HardwareRayTracing.LightingMode=0
-r.DefaultFeature.AutoExposure.Method=1
+r.DefaultFeature.AutoExposure.Method=0
+r.DefaultFeature.Bloom=True
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure.Bias=1.000000
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
