--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -31,7 +31,7 @@ bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=False
 bUseIoStore=True
 bUseZenStore=False
-bMakeBinaryConfig=False
+bMakeBinaryConfig=True
 bGenerateChunks=False
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
@@ -111,18 +111,23 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Pipelines")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
-+DirectoriesToAlwaysCook=(Path="/Game/SHOC/Meshes")
 +DirectoriesToAlwaysCook=(Path="/Game/Base")
++DirectoriesToAlwaysCook=(Path="/Game/SHOC/Meshes")
++DirectoriesToAlwaysCook=(Path="/Game/SHOC/Spawns")
++DirectoriesToAlwaysCook=(Path="/Game/SHOC/PhysicalMaterials")
 +DirectoriesToAlwaysCook=(Path="/Game/SHOC/Textures/ui")
 +DirectoriesToAlwaysCook=(Path="/Game/SHOC/Textures/map")
-PerPlatformBuildConfig=(("Windows", PPBC_Shipping))
++DirectoriesToAlwaysCook=(Path="/Game/SHOC/Textures/wpn")
++DirectoriesToAlwaysCook=(Path="/Game/SHOC/Materials/hud")
+PerPlatformBuildConfig=(("Windows", PPBC_Development))
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
 
 [/Script/Engine.AssetManagerSettings]
 -PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 -PrimaryAssetTypesToScan=(PrimaryAssetType="PrimaryAssetLabel",AssetBaseClass=/Script/Engine.PrimaryAssetLabel,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
-+PrimaryAssetTypesToScan=(PrimaryAssetType="Maps",AssetBaseClass="/Script/Engine.Level",bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/SHOC/Maps")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=AlwaysCook))
++PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass="/Script/Engine.World",bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/Maps"),(Path="/Game/SHOC/Maps")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=AlwaysCook))
++PrimaryAssetTypesToScan=(PrimaryAssetType="PrimaryAssetLabel",AssetBaseClass="/Script/Engine.PrimaryAssetLabel",bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 bOnlyCookProductionAssets=False
 bShouldManagerDetermineTypeAndName=False
 bShouldGuessTypeAndNameInEditor=True
