* Проект переведён в офиыиальный 5.1

--- a/Stalker.uproject
+++ b/Stalker.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{87DC6DFD-4B42-14D1-6A38-CA8F8C9F0966}",
+	"EngineAssociation": "5.1",
 	"Category": "",
 	"Description": "",
 	"Modules": [
