* WIP:Particles importer * To UE5.2

--- a/Stalker.uproject
+++ b/Stalker.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.1",
+	"EngineAssociation": "5.2",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -34,6 +34,10 @@
 		},
 		{
 			"Name": "BinkMedia",
+			"Enabled": true
+		},
+		{
+			"Name": "RenderDocPlugin",
 			"Enabled": true
 		}
 	]
