* ADD:Новый HUD Fov спасибо евгену

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -67,6 +67,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 GameViewportClientClassName=/Script/Stalker.StalkerGameViewportClient
 WorldSettingsClassName=/Script/Stalker.StalkerWorldSettings
 LevelScriptActorClassName=/Script/Stalker.StalkerLevelScriptActor
+NearClipPlane=0.100000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
