* ADD: Улучшил импортер частиц. Добавил возможность выберать какие частицы будут иметь hud режим

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -15,6 +15,7 @@ NeedAutoBuildGameSpawn=True
 UseCurrentWorldSpawn=True
 IgnoreIncludeInBuildSpawn=True
 VerifySpaceRestrictorBorders=False
++ParticlesUsingHudMode="weapons\\"
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
