* ADD: BP_GameMode и BP_PlayerCharacter * FIX: StalkerBump  теперь свет работает более меннее

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 GameDefaultMap=/Game/BaseNoGit/ThirdParty/mainMenu/mainMenu_LVL.mainMenu_LVL
 EditorStartupMap=/Game/SHOC/Maps/l01_escape.l01_escape
 GameInstanceClass=/Script/Stalker.StalkerGameInstance
-GlobalDefaultGameMode=/Script/Stalker.StalkerGameMode
+GlobalDefaultGameMode=/Game/Base/Blueprints/BP_GameMode.BP_GameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -46,16 +46,27 @@ r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=0
-r.Lumen.TraceMeshSDFs=1
+r.Lumen.TraceMeshSDFs=0
 r.SkinCache.CompileShaders=True
 r.RayTracing=False
 r.Lumen.HardwareRayTracing=True
 r.Lumen.HardwareRayTracing.LightingMode=0
-r.DefaultFeature.AutoExposure.Method=0
+r.DefaultFeature.AutoExposure.Method=2
 r.DefaultFeature.Bloom=True
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Bias=1.000000
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
+r.AntiAliasingMethod=4
+r.DefaultFeature.MotionBlur=False
+r.PathTracing=False
+r.RayTracing.Skylight=False
+r.RayTracing.Shadows=False
+r.TemporalAA.Upsampling=False
+RedChromaticityCoordinate=(X=0.640000,Y=0.330000)
+GreenChromaticityCoordinate=(X=0.300000,Y=0.600000)
+BlueChromaticityCoordinate=(X=0.150000,Y=0.060000)
+WhiteChromaticityCoordinate=(X=0.312700,Y=0.329000)
+WorkingColorSpaceChoice=sRGB
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
