--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -21,8 +21,6 @@ VerifySpaceRestrictorBorders=False
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
-LaunchOnTarget=
-StagingDirectory=(Path="")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -120,9 +118,7 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/Game/SHOC/Textures/map")
 +DirectoriesToAlwaysCook=(Path="/Game/SHOC/Textures/wpn")
 +DirectoriesToAlwaysCook=(Path="/Game/SHOC/Materials/hud")
-PerPlatformBuildConfig=(("Windows", PPBC_Development))
-PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
-PerPlatformBuildTarget=()
++DirectoriesToAlwaysCook=(Path="/Game/SHOC/Particles")
 
 [/Script/Engine.AssetManagerSettings]
 -PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
