* FIX:Гамма коррекция материалов исправлена * EDIT:Сильная перерабодка материалов с поддержкой  displacement * ADD:Сильная перерабодка материалов террейна с поддержки displacement * EDIT:Данные об анимации и skeletal mesh перенесены в userdata * ADD:Импортер статических частиц на уровне * ADD:Импортер статических декалей на уровне * ADD:ReTools для декомпила и востоновления ориг спавна

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Plugins/VisualStudioTools"]
 	path = Plugins/VisualStudioTools
 	url = https://github.com/microsoft/vc-ue-extensions.git
+[submodule "Source/Utils/XRayReTools"]
+	path = Source/Utils/XRayReTools
+	url = https://github.com/BearIvan/xray_re-tools
