--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,11 +62,15 @@ r.PathTracing=False
 r.RayTracing.Skylight=False
 r.RayTracing.Shadows=False
 r.TemporalAA.Upsampling=False
+r.Nanite.AllowTessellation=1
+r.Nanite.Tessellation=1
 RedChromaticityCoordinate=(X=0.640000,Y=0.330000)
 GreenChromaticityCoordinate=(X=0.300000,Y=0.600000)
 BlueChromaticityCoordinate=(X=0.150000,Y=0.060000)
 WhiteChromaticityCoordinate=(X=0.312700,Y=0.329000)
 WorkingColorSpaceChoice=sRGB
+r.CustomDepthTemporalAAJitter=True
+r.CustomDepth=3
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -108,4 +112,5 @@ ManualIPAddress=
 +ClassRedirects=(OldName="XRaySkeletonMeshData",NewName="StalkerKinematicsData")
 +ClassRedirects=(OldName="XRaySkeletonMeshAnimsData",NewName="StalkerKinematicsAnimsData")
 +ClassRedirects=(OldName="StalkerLevelSapwn",NewName="StalkerLevelSpawn")
++ClassRedirects=(OldName="/Script/Stalker.StalkerKinematicsData",NewName="/Script/Stalker.StalkerKinematicsAssetUserData")
 
