--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -16,6 +16,8 @@ UseCurrentWorldSpawn=True
 IgnoreIncludeInBuildSpawn=False
 VerifySpaceRestrictorBorders=False
 +ParticlesUsingHudMode="weapons\\"
+ReplaceShaderWhenImport=(("def_shaders\\def_vertex", "default"),("def_shaders\\def_trans_v", "def_shaders\\def_trans"),("def_shaders\\def_aref_v", "def_shaders\\def_aref"),("def_shaders\\def_objects_lod", "default"))
+DisableDistanceFieldOfCompilerShaderWhenImport=("flora\\leaf")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
