--- a/Stalker.uproject
+++ b/Stalker.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.3",
+	"EngineAssociation": "{BFB54F86-4CC3-AC9C-1AD4-06BB5050AADA}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
