* ADD: Поддержка DivideSubObject при импорте сцены для определенной группы объектов

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -18,6 +18,8 @@ VerifySpaceRestrictorBorders=False
 +ParticlesUsingHudMode="weapons\\"
 ReplaceShaderWhenImport=(("def_shaders\\def_vertex", "default"),("def_shaders\\def_trans_v", "def_shaders\\def_trans"),("def_shaders\\def_aref_v", "def_shaders\\def_aref"),("def_shaders\\def_objects_lod", "default"))
 DisableDistanceFieldOfCompilerShaderWhenImport=("flora\\leaf")
++MeshesDivideSubObjectWhenImportLevel="scenes\\"
++MeshesDivideSubObjectWhenImportLevel="levels\\"
 AlwaysOverwriteAssetsWhenImport=False
 DefaultUnknownMaterial=/Game/Base/Materials/Unkown.Unkown
 DefaultDecalUnknownMaterial=/Game/Base/Materials/Decals/Default.Default
