* EDIT: Переработа утилита импорта текстур

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -20,7 +20,11 @@ ReplaceShaderWhenImport=(("def_shaders\\def_vertex", "default"),("def_shaders\\d
 DisableDistanceFieldOfCompilerShaderWhenImport=("flora\\leaf")
 +MeshesDivideSubObjectWhenImportLevel="scenes\\"
 +MeshesDivideSubObjectWhenImportLevel="levels\\"
-AlwaysOverwriteAssetsWhenImport=False
++UITexturesPrefix="ui\\"
++UITexturesPrefix="map\\"
++UITexturesPrefix=wpn\wpn_crosshair
++IgnoreTexturesWithPrefixWhenImport=ui\ui_font
+AlwaysOverwriteAssetsWhenImport=True
 DefaultUnknownMaterial=/Game/Base/Materials/Unkown.Unkown
 DefaultDecalUnknownMaterial=/Game/Base/Materials/Decals/Default.Default
 DefaultParticleUnknownMaterial=/Game/Base/Materials/ParticleUnkown.ParticleUnkown
