* ADD:Добавлен PP

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -113,6 +113,7 @@ ManualIPAddress=
 +ClassRedirects=(OldName="XRaySkeletonMeshAnimsData",NewName="StalkerKinematicsAnimsData")
 +ClassRedirects=(OldName="StalkerLevelSapwn",NewName="StalkerLevelSpawn")
 +ClassRedirects=(OldName="/Script/Stalker.StalkerKinematicsData",NewName="/Script/Stalker.StalkerKinematicsAssetUserData")
++PropertyRedirects=(OldName="/Script/Stalker.StalkerGameSettings.DefaultStaticDecalMaterial",NewName="/Script/Stalker.StalkerGameSettings.DefaultDecalMaterial")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
