* FIX: -game режим для редактора не работал

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -135,6 +135,7 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/Game/SHOC/Meshes")
 +DirectoriesToAlwaysCook=(Path="/Game/SHOC/Spawns")
 +DirectoriesToAlwaysCook=(Path="/Game/SHOC/PhysicalMaterials")
++DirectoriesToAlwaysCook=(Path="/Game/SHOC/Sounds")
 +DirectoriesToAlwaysCook=(Path="/Game/SHOC/Textures/ui")
 +DirectoriesToAlwaysCook=(Path="/Game/SHOC/Textures/map")
 +DirectoriesToAlwaysCook=(Path="/Game/SHOC/Textures/wpn")
