* ADD: Асинхронный загрузочный экран

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -27,6 +27,7 @@ DisableDistanceFieldOfCompilerShaderWhenImport=("flora\\leaf")
 +UITexturesPrefix="ui\\"
 +UITexturesPrefix="map\\"
 +UITexturesPrefix=wpn\wpn_crosshair
++UITexturesPrefix="intro\\"
 +WMTexturesPrefix="wm\\"
 +GradTexturesPrefix="grad\\"
 +IgnoreTexturesWithPrefixWhenImport=ui\ui_font
@@ -155,4 +156,10 @@ bShouldWarnAboutInvalidAssets=True
 MetaDataTagsForAssetRegistry=()
 
 [/Script/AssetTools.AssetToolsSettings]
+;
+;[/Script/MoviePlayer.MoviePlayerSettings]
+;bWaitForMoviesToComplete=True
+;bMoviesAreSkippable=True
+;+StartupMovies=intro_soc_gsc
+;+StartupMovies=intro_soc_thq
 
