* EDIT: Set SHOC default

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,7 +4,7 @@
 ProjectID=CA68C2FE49C7AC3EA24373A72D6469D8
 
 [/Script/Stalker.StalkerGameSettings]
-EditorStartupGame=COP
+EditorStartupGame=SHOC
 DefaultDecalMaterial=/Game/Base/Materials/effects/wallmarkblend.wallmarkblend
 PostProcessMaterial=/Game/Base/Materials/PostProcess/Main.Main
 MasterSoundClass=/Game/Base/Sounds/MasterClass.MasterClass
