* FIX: Invalid normals in skeletal meshes * EDIT: Lumen is disable (GI only static now)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -43,8 +43,8 @@ SoundCueCookQualityIndex=-1
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
-r.ReflectionMethod=1
+r.DynamicGlobalIlluminationMethod=0
+r.ReflectionMethod=2
 r.Shadow.Virtual.Enable=0
 r.Lumen.TraceMeshSDFs=0
 r.SkinCache.CompileShaders=True
@@ -71,6 +71,7 @@ WhiteChromaticityCoordinate=(X=0.312700,Y=0.329000)
 WorkingColorSpaceChoice=sRGB
 r.CustomDepthTemporalAAJitter=True
 r.CustomDepth=3
+r.NormalMapsForStaticLighting=True
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -177,4 +178,7 @@ ManualIPAddress=
 DefaultBaseSoundMix=/Game/Base/Sounds/MasterMix.MasterMix
 DefaultSoundClassName=/Game/Base/Sounds/EffectClass.EffectClass
 DefaultMediaSoundClassName=/Game/Base/Sounds/MusicClass.MusicClass
+
+[/Script/RenderDocPlugin.RenderDocPluginSettings]
+renderdoc.AutoAttach=False
 
