* EDIT: Normals optimized

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -56,7 +56,7 @@ r.DefaultFeature.Bloom=True
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Bias=1.000000
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
-r.AntiAliasingMethod=4
+r.AntiAliasingMethod=0
 r.DefaultFeature.MotionBlur=False
 r.PathTracing=False
 r.RayTracing.Skylight=False
@@ -72,6 +72,7 @@ WorkingColorSpaceChoice=sRGB
 r.CustomDepthTemporalAAJitter=True
 r.CustomDepth=3
 r.NormalMapsForStaticLighting=True
+r.MSAACount=8
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -153,7 +154,7 @@ ManualIPAddress=
 +Profiles=(Name="Ragdoll",CollisionEnabled=QueryAndPhysics,bCanModify=False,ObjectTypeName="PhysicsBody",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore)),HelpMessage="Simulating Skeletal Mesh Component. All other channels will be set to default.")
 +Profiles=(Name="Vehicle",CollisionEnabled=QueryAndPhysics,bCanModify=False,ObjectTypeName="Vehicle",CustomResponses=,HelpMessage="Vehicle object that blocks Vehicle, WorldStatic, and WorldDynamic. All other channels will be set to default.")
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility"),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
-+Profiles=(Name="Kinematics",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="Kinematics")),HelpMessage="Needs description")
++Profiles=(Name="Kinematics",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="Kinematics")),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="Kinematics")
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
@@ -181,4 +182,13 @@ DefaultMediaSoundClassName=/Game/Base/Sounds/MusicClass.MusicClass
 
 [/Script/RenderDocPlugin.RenderDocPluginSettings]
 renderdoc.AutoAttach=False
+
+[/Script/DLSS.DLSSSettings]
+bEnableDLSSInEditorViewports=True
+
+[/Script/StreamlineRHI.StreamlineSettings]
+bLoadDebugOverlay=False
+bEnableDLSSFGInPlayInEditorViewports=False
+bEnableStreamlineD3D11=True
+bEnableStreamlineD3D12=True
 
