Only Night Lighting (E1)
Fixed UDS Materials

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -45,18 +45,18 @@ SoundCueCookQualityIndex=-1
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=0
 r.ReflectionMethod=2
-r.Shadow.Virtual.Enable=0
+r.Shadow.Virtual.Enable=1
 r.Lumen.TraceMeshSDFs=0
 r.SkinCache.CompileShaders=True
 r.RayTracing=False
-r.Lumen.HardwareRayTracing=True
+r.Lumen.HardwareRayTracing=False
 r.Lumen.HardwareRayTracing.LightingMode=0
 r.DefaultFeature.AutoExposure.Method=2
 r.DefaultFeature.Bloom=True
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Bias=1.000000
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
-r.AntiAliasingMethod=0
+r.AntiAliasingMethod=4
 r.DefaultFeature.MotionBlur=False
 r.PathTracing=False
 r.RayTracing.Skylight=False
@@ -73,6 +73,8 @@ r.CustomDepthTemporalAAJitter=True
 r.CustomDepth=3
 r.NormalMapsForStaticLighting=True
 r.MSAACount=8
+r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=False
+r.AllowStaticLighting=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -85,6 +87,8 @@ GameViewportClientClassName=/Script/Stalker.StalkerGameViewportClient
 WorldSettingsClassName=/Script/Stalker.StalkerWorldSettings
 LevelScriptActorClassName=/Script/Stalker.StalkerLevelScriptActor
 NearClipPlane=0.100000
+bUseFixedFrameRate=True
+FixedFrameRate=30.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
