--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -42,6 +42,9 @@ AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
 
 [/Script/Engine.RendererSettings]
+
+r.Nanite.AllowTessellation=1
+r.Nanite.Tessellation=1
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=0
 r.ReflectionMethod=2
@@ -51,6 +54,10 @@ r.SkinCache.CompileShaders=True
 r.RayTracing=False
 r.Lumen.HardwareRayTracing=False
 r.Lumen.HardwareRayTracing.LightingMode=0
+r.Lumen.ScreenProbeGather.SpatialFilterMaxRadianceHitAngle=1000
+r.Lumen.ScreenProbeGather.ScreenTraces.HZBTraversal=0
+r.Lumen.ScreenProbeGather.Temporal.NormalThreshold=1000
+r.Lumen.ScreenProbeGather.Temporal.RejectBasedOnNormal=1
 r.DefaultFeature.AutoExposure.Method=2
 r.DefaultFeature.Bloom=True
 r.DefaultFeature.AutoExposure=False
@@ -64,6 +71,7 @@ r.RayTracing.Shadows=False
 r.TemporalAA.Upsampling=False
 r.Nanite.AllowTessellation=1
 r.Nanite.Tessellation=1
+r.Nanite.DicingRate=10
 RedChromaticityCoordinate=(X=0.640000,Y=0.330000)
 GreenChromaticityCoordinate=(X=0.300000,Y=0.600000)
 BlueChromaticityCoordinate=(X=0.150000,Y=0.060000)
@@ -87,7 +95,7 @@ GameViewportClientClassName=/Script/Stalker.StalkerGameViewportClient
 WorldSettingsClassName=/Script/Stalker.StalkerWorldSettings
 LevelScriptActorClassName=/Script/Stalker.StalkerLevelScriptActor
 NearClipPlane=0.100000
-bUseFixedFrameRate=True
+bUseFixedFrameRate=False
 FixedFrameRate=30.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
