Lumen Foliage Fix

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -52,6 +52,8 @@ r.Shadow.Virtual.Enable=1
 r.Lumen.TraceMeshSDFs=0
 r.SkinCache.CompileShaders=True
 r.RayTracing=False
+r.VolumetricFog.UpsampleJitterMultiplier=0.666
+r.Lumen.ScreenProbeGather.ShortRangeAO.ScreenSpace.FoliageOcclusionStrength=0.25
 r.Lumen.HardwareRayTracing=False
 r.Lumen.HardwareRayTracing.LightingMode=0
 r.Lumen.ScreenProbeGather.SpatialFilterMaxRadianceHitAngle=1000
